# household-robot-bench

./: LICENSE  README.md  example.py  pyproject.toml
household_robot/: __init__.py  task.py
