[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "household-robot-bench"
version = "0.1.0"
description = "Text-based household robot manipulation benchmark for LLM agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["benchmark", "llm", "robotics", "planning", "agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/amirfar76/household-robot-bench"
